--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,6 +5,7 @@
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.BasaliProject"
     app:layoutDescription="@xml/activity_welcome_scene"
     tools:context=".ui.welcome.WelcomeActivity">
 
@@ -45,7 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Scan Your Aksara"
+        android:text="@string/scan_your_aksara"
         android:textColor="@color/NeutralDarkMid"
         android:textSize="38sp"
         android:textStyle="bold"
@@ -57,7 +58,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Scan your handwriting balinese script character using your camera"
+        android:text="@string/scan_your_handwriting_balinese_script_character_using_your_camera"
         android:textColor="@color/NeutralDarkLight"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -86,7 +87,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Enjoy Your Journey"
+        android:text="@string/enjoy_your_journey"
         android:textColor="@color/NeutralDarkMid"
         android:textSize="38sp"
         android:textStyle="bold"
@@ -98,7 +99,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="our platform provides balinese script character learning items"
+        android:text="@string/our_platform_provides_balinese_script_character_learning_items"
         android:textColor="@color/NeutralDarkLight"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -163,7 +164,7 @@
         android:layout_marginBottom="8dp"
         android:alpha="0"
         android:gravity="center_horizontal"
-        android:text="Or continue with Google"
+        android:text="@string/or_continue_with_google"
         android:textColor="@color/NeutralDarkLight"
         android:textSize="12sp"
         android:textStyle="bold"
