--- a/app/src/main/res/layout-land/activity_welcome.xml
+++ b/app/src/main/res/layout-land/activity_welcome.xml
@@ -5,6 +5,7 @@
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.BasaliProject"
     tools:context=".ui.welcome.WelcomeActivity">
 
     <ImageView
