update and delete profile picture function

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,6 +47,7 @@
                     android:layout_height="120dp"
                     android:scaleType="centerCrop"
                     android:contentDescription="@string/profile_image"
+                    android:src="@drawable/ic_baseline_person_24"
                     android:layout_gravity="center_horizontal"/>
 
                 <ImageButton
@@ -73,6 +74,7 @@
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:textSize="30sp"
@@ -83,6 +85,7 @@
                 android:id="@+id/tv_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:textStyle="italic"
@@ -94,7 +97,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginTop="24dp"
                 android:orientation="horizontal"
                 app:navGraph="@navigation/mobile_navigation">
 
@@ -217,6 +219,7 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@color/NeutralLightDark" />
 
         </LinearLayout>
