--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -16,7 +16,7 @@
             android:layout_height="200dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:contentDescription="@string/login_image_2"
+            android:contentDescription="@string/kipas_bali"
             android:background="@drawable/circle_background"
             app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
             app:layout_constraintEnd_toEndOf="parent"
