--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -18,6 +18,7 @@
             android:layout_width="70dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
+            android:contentDescription="@string/app_name"
             android:src="@drawable/logo"/>
 
     </androidx.appcompat.widget.Toolbar>
