--- a/app/src/main/res/layout/fragment_tab_scan.xml
+++ b/app/src/main/res/layout/fragment_tab_scan.xml
@@ -50,7 +50,7 @@
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="45dp"
                     android:src="@drawable/cam_placeholder_logo"
-                    android:contentDescription="img_placeholder"/>
+                    android:contentDescription="@string/scanned"/>
 
                 <ProgressBar
                     android:id="@+id/progressBar"
